Fixed minnor spacing issue make button style common

--- a/themes/ezcontent_theme/scss/abstracts/_mixins.scss
+++ b/themes/ezcontent_theme/scss/abstracts/_mixins.scss
@@ -39,7 +39,7 @@
   font-size: 16px;
   line-height: 1.42857143;
   margin-bottom: 0;
-  padding: 10px;
+  padding: 5px 10px;
   position: relative;
   text-align: center;
   vertical-align: middle;
