--- a/themes/ezcontent_theme/scss/abstracts/_variables.scss
+++ b/themes/ezcontent_theme/scss/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $color-grey-light-1: #f0f6eb;
 $color-grey-light-2: #ddd;
 $color-grey-light-3: #4a4a4a;
 $color-grey-light-4: #e5e5e5;
+$color-grey-light-dark: #e8e8e8;
 
 $color-white: #fff;
 $color-black: #000;
