--- a/themes/ezcontent_theme/scss/paragraph/card_list.scss
+++ b/themes/ezcontent_theme/scss/paragraph/card_list.scss
@@ -5,7 +5,7 @@
 .paragraph--type--card-list {
   background: $color-white;
   border: 1px solid $color-grey-light-2;
-  margin: 30px 0;
+  margin-bottom: 30px;
   padding: 0;
 
   .paragraph--type--card {
